funcionando junto a backend con keycloak

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <mat-toolbar color="primary">
   <span> {{title}} </span>
   <span class="example-fill-remaining-space"></span>  
+  <button class="button-logout" mat-flat-button type="button" color="warn" (click)="logout()">LOGOUT</button>
 </mat-toolbar> 
 
  
